--- a/crudexample/employee/templates/edit.html
+++ b/crudexample/employee/templates/edit.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>  
 </head>  
 <body>  
-<form method="POST" class="post-form" action="/update/{{employee.id}}">  
+<form method="POST" class="post-form" action="/update/{{employee.id}}" enctype="multipart/form-data">  
         {% csrf_token %}  
     <div class="container">  
 <br>  
@@ -39,6 +39,11 @@
     <label class="col-sm-2 col-form-label">Employee Contact:</label>  
     <div class="col-sm-4">  
         <input type="text" name="econtact" id="id_econtact" required maxlength="15" value="{{ employee.econtact }}" />  
+    </div>  
+    <div class="form-group row">  
+    <label class="col-sm-2 col-form-label">Employee ProfilePic:</label>  
+    <div class="col-sm-4">  
+        <input type="file" name="profilePic" id="id_profilePic" value="{{ employee.profilePic }}" />  
     </div>  
   </div>  
     <div class="form-group row">  
